--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -50,7 +50,7 @@ services:
       - DATABASE_URL=postgresql://danbooru@postgres/danbooru
       - DANBOORU_REDIS_URL=redis://redis:6379
       - DANBOORU_IQDB_URL=http://iqdb:5588
-      - DANBOORU_CANONICAL_URL=http://192.168.0.31
+      - DANBOORU_CANONICAL_URL=http://localhost
     depends_on:
       - danbooru
     volumes:
@@ -66,7 +66,7 @@ services:
       - DATABASE_URL=postgresql://danbooru@postgres/danbooru
       - DANBOORU_REDIS_URL=redis://redis:6379
       - DANBOORU_IQDB_URL=http://iqdb:5588
-      - DANBOORU_CANONICAL_URL=http://192.168.0.31
+      - DANBOORU_CANONICAL_URL=http://localhost
     depends_on:
       - danbooru
     volumes:
